--- a/Aberrations/ABR018.html
+++ b/Aberrations/ABR018.html
@@ -60,7 +60,15 @@
             padding-left: 0;
         }
         li {
-            padding: 5px 0;
+            padding: 8px;
+            margin: 5px 0;
+        }
+        a {
+            color: #9c9c9c;
+            text-decoration: none;
+        }
+        a:hover {
+            color: #ffffff;
         }
     </style>
 </head>
@@ -78,45 +86,45 @@
     <div class="container">
         <h1>ABERRATION DOCUMENT: ABR-018</h1>
         <p><strong>Aberration Designation:</strong> ABR-018</p>
+        <p><strong>Special Title:</strong> Reflective Aberration</p>
         <p><strong>Threat Level:</strong> Class IV: Critical</p>
         <p><strong>Containment Level:</strong> Delta-3</p>
 
         <h2>Description</h2>
-        <p>ABR-018 is a vintage Polaroid camera of unknown make and model. The camera exhibits no external markings or serial numbers, and its internal mechanisms do not correspond to any known manufacturing techniques. Despite its antiquated appearance, ABR-018 functions normally and produces instant photographs.</p>
-        <p>When a photograph is taken using ABR-018, the resulting Polaroid image will depict the scene and the moment of death of any individuals who have died at the location within the frame. This effect applies to deaths both in the past and up to five years into the future. If no deaths have occurred at the location within this ten-year window, the Polaroid will appear normal. However, due to the extensive history of human deaths, the majority of locations yield images depicting death.</p>
+        <p>ABR-018, known as Reflective Aberration, is an antique mirror measuring 2 meters in height and 1 meter in width, framed in ornate gold-leafed woodwork. The surface of ABR-018 appears to be normal glass; however, any individual who views their reflection in ABR-018 will experience an anomalous event.</p>
+        <p>Subjects who look into ABR-018 will see a reflection that initially appears normal but gradually begins to change. Within approximately 30 seconds, the reflection will start to diverge from the subject's actual appearance, often displaying exaggerated, idealized, or grotesque versions of the subject. These changes can range from slight alterations in facial features to complete transformations into other entities or landscapes.</p>
+        <p>The anomalous effects of ABR-018 extend beyond visual changes. Subjects exposed to ABR-018's reflection report intense feelings of euphoria, dread, or a compulsion to continue looking into the mirror. Prolonged exposure can result in severe psychological distress, hallucinations, and, in some cases, permanent alteration of the subject's personality and behavior.</p>
 
         <h2>Containment Protocols</h2>
-        <p>ABR-018 is to be stored in a high-security containment locker at ARI Site-19. Access to ABR-018 is restricted to Level 4 personnel and above, and any experimentation must be approved by the Site Director. All photographs taken by ABR-018 are to be stored in a separate secure file, accessible only with authorization from the Executive Council (C5).</p>
-        <p>Testing with ABR-018 is to be conducted in a controlled environment, with no fewer than three security personnel present. Locations used for testing must be carefully selected and documented. All testing sessions are to be recorded and documented. Under no circumstances is ABR-018 to be used outside of designated testing protocols.</p>
+        <p>ABR-018 is to be contained in a standard Euclid-class containment chamber at ARI Site-17. The chamber must be fitted with reinforced concrete walls and a single access door. No reflective surfaces are permitted within a 10-meter radius of the chamber. All personnel entering ABR-018's containment area must undergo psychological evaluation before and after exposure.</p>
+        <p>ABR-018 is to be kept under constant video surveillance. Any changes in its appearance or behavior must be reported immediately to the Site Director. Testing with ABR-018 requires written authorization from at least two Level 3 personnel and must be conducted under the supervision of at least one Level 4 personnel.</p>
 
         <h2>Risk Assessment</h2>
-        <p>ABR-018 demonstrates a consistent ability to reveal the moment of death at a given location, posing significant ethical and psychological risks. The potential for misuse or exploitation necessitates strict containment and access controls. The certainty of the events depicted, especially those predicted to occur within five years, presents profound implications for understanding and potentially manipulating fate and causality.</p>
+        <p>ABR-018 exhibits unpredictable and highly variable effects on individuals. The psychological impact of exposure necessitates rigorous containment protocols and careful handling. The potential for severe psychological distress, hallucinations, and permanent personality alterations necessitates strict containment and handling protocols.</p>
 
         <h2>Behavioral Analysis</h2>
-        <p>ABR-018 does not exhibit behavior but its effects on the environment it photographs are profound. The variability in the depicted deaths, combined with the certainty of occurrence within the five-year limit, suggests a deterministic aspect to ABR-018's function that defies conventional understanding of time and causality.</p>
+        <p>ABR-018 does not exhibit active behavior or movement. Its anomalous properties are triggered by human interaction, specifically visual contact with its reflective surface. The variability in the mirror's effects on different individuals suggests a degree of responsiveness to the subject's psychological state or perception.</p>
+        <p>Subjects' reflections in ABR-018 diverge in ways that can be idealized, grotesque, or entirely alien, indicating that the mirror's effects are influenced by the viewer's subconscious. This interaction suggests a complex and potentially hazardous influence on human cognition and perception.</p>
 
         <h2>Appendices</h2>
         <p><strong>Addendum ABR-018-1: Incident Report ABR-018-01</strong></p>
-        <p>On ██/██/20██, during routine testing, ABR-018 was used to photograph a standard containment cell. The resulting image showed the cell empty, with no signs of death. However, during subsequent tests in different locations, the photographs consistently depicted deaths of individuals at those locations, confirming ABR-018's ability to reveal death scenes.</p>
+        <p>On ██/██/20██, Dr. █████ conducted an unauthorized experiment with ABR-018, resulting in a containment breach. Dr. █████ observed his reflection transform into a being of unknown origin, which subsequently attempted to breach the mirror's surface. Security personnel were able to recontain ABR-018, but Dr. █████ suffered irreversible psychological damage and is currently under intensive psychiatric care.</p>
         
         <p><strong>Addendum ABR-018-2: Experiment Log ABR-018-A</strong></p>
         <ul>
-            <li><strong>Location:</strong> Containment Cell A-19</li>
-            <li><strong>Procedure:</strong> ABR-018 used to photograph the cell.</li>
-            <li><strong>Result:</strong> Photograph showed no signs of death. The cell has no recorded incidents of death within the past or future five-year range.</li>
+            <li><strong>Subject:</strong> D-9341</li>
+            <li><strong>Procedure:</strong> Subject instructed to look into ABR-018 for 60 seconds.</li>
+            <li><strong>Result:</strong> Subject's reflection altered to show a younger, healthier version of themselves. Subject reported feelings of intense joy and attempted to touch the mirror, resulting in a mild electric shock. Subject removed from testing area with no long-term effects observed.</li>
         </ul>
         <ul>
-            <li><strong>Location:</strong> Site-19 Cafeteria</li>
-            <li><strong>Procedure:</strong> ABR-018 used to photograph the cafeteria.</li>
-            <li><strong>Result:</strong> Photograph depicted an individual suffering from extensive third-degree burns. A week later, a fire broke out in the cafeteria due to an electrical fault, resulting in injuries and confirming the scene depicted in the photograph.</li>
+            <li><strong>Subject:</strong> D-1022</li>
+            <li><strong>Procedure:</strong> Subject instructed to look into ABR-018 for 120 seconds.</li>
+            <li><strong>Result:</strong> Subject's reflection transformed into a monstrous, disfigured version of themselves. Subject exhibited signs of extreme distress and attempted to flee the testing area. Subject later reported seeing the altered reflection in all reflective surfaces, leading to a state of acute paranoia.</li>
         </ul>
 
-        <p><strong>Addendum ABR-018-3: Safety Protocol Improvement Initiative</strong></p>
-        <p>ABR-018 has been utilized to enhance safety measures within high-risk containment cells. By taking images of these cells and observing any depicted deaths, ARI personnel have implemented additional safety protocols until photographs taken by ABR-018 no longer depict any deaths within the five-year range. This method has successfully reduced incidents and improved overall safety within these areas.</p>
+        <p><strong>Conclusion:</strong> ABR-018 exhibits unpredictable and highly variable effects on individuals. Further testing is required to determine the full extent of ABR-018's anomalous properties and the potential risks involved.</p>
 
-        <p><strong>Conclusion:</strong> ABR-018 exhibits a consistent ability to reveal the moment of death at a given location within a five-year future range or any past event. The source of ABR-018's predictive capability remains unknown. Further study is required to understand the mechanism behind its anomalous properties and to explore potential uses or countermeasures.</p>
-
-        <p><strong>Researcher's Note:</strong> The implications of ABR-018 are profound, suggesting a deterministic aspect of reality that defies conventional understanding. Ethical considerations must be paramount in all future experiments, given the inevitability of the outcomes depicted by ABR-018.</p>
+        <p><strong>Researcher's Note:</strong> ABR-018 presents a unique and challenging anomaly. The psychological impact of exposure necessitates rigorous containment protocols and careful handling. Continued study may reveal insights into the nature of perception and the mind's relationship with reflective surfaces.</p>
 
         <h1>END OF DOCUMENT</h1>
     </div>
