--- a/ABRlist.html
+++ b/ABRlist.html
@@ -47,8 +47,8 @@
             padding-left: 0;
         }
         li {
-            padding: 8px;
-            margin: 5px 0;
+            padding: 4px 0;
+            margin: 2px 0;
         }
         a {
             color: #9c9c9c;
@@ -92,7 +92,7 @@
             <li><a href="Aberrations/ABR017.html">ABR-017 - Phantom Flu</a></li>
             <li><a href="Aberrations/ABR018.html">ABR-018 - Reflective Aberration</a></li>
             <li><a href="Aberrations/ABR019.html">ABR-019 - Deathly Snapshot</a></li>
-            <li><a href="Aberrations/ABR020.html">ABR-020 - </a></li>
+            <li><a href="Aberrations/ABR020.html">ABR-020 - Memory Leech</a></li>
         </ul>
     </div>
 </body>
