--- a/ABRlist.html
+++ b/ABRlist.html
@@ -73,7 +73,7 @@
     <div class="container">
         <h1>Aberration Index</h1>
         <ul>
-            <li><a href="Aberrations/ABR001.html">ABR-001 - Nephological Entity</a></li>
+            <li><a href="Aberrations/ABR-001/ABR001.html">ABR-001 - Nephological Entity</a></li>
             <li><a href="Aberrations/ABR002.html">ABR-002 - Voidshadow</a></li>
             <li><a href="Aberrations/ABR003.html">ABR-003 - The Unseen Stalker</a></li>
             <li><a href="Aberrations/ABR004.html">ABR-004 - The Oracle Terminal</a></li>
