--- a/Aberrations/ABR-001/ABR001.html
+++ b/Aberrations/ABR-001/ABR001.html
@@ -37,6 +37,20 @@
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
+        .header-section {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+        .header-section div {
+            flex: 1;
+        }
+        .header-section img {
+            max-width: 200px;
+            margin-left: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
+        }
         h1 {
             font-size: 22px;
             border-bottom: 1px solid #666;
@@ -75,10 +89,15 @@
 
     <div class="container">
         <h1>ABERRATION DOCUMENT: ABR-001</h1>
-        <p><strong>Aberration Designation:</strong> ABR-001</p>
-        <p><strong>Codename:</strong> Nephological Entity</p>
-        <p><strong>Threat Level:</strong> Class IV: Critical</p>
-        <p><strong>Containment Level:</strong> Delta-2</p>
+        <div class="header-section">
+            <div>
+                <p><strong>Aberration Designation:</strong> ABR-001</p>
+                <p><strong>Codename:</strong> Nephological Entity</p>
+                <p><strong>Threat Level:</strong> Class IV: Critical</p>
+                <p><strong>Containment Level:</strong> Delta-2</p>
+            </div>
+            <img src="ARI/Aberrations/ABR-001/Image of ABR001.jpg" alt="Image of ABR-001">
+        </div>
 
         <h2>Description</h2>
         <p>ABR-001, codenamed "Nephological Entity," is a humanoid entity standing approximately 1.8 meters in height, comprised entirely of densely packed cloud formations that constantly shift and change. It resembles a towering cumulonimbus cloud, with its form subtly altering to reflect its mood and intentions. Despite its ethereal composition, the Nephological Entity can interact with physical objects, altering its size, density, and weather-creating capabilities. Its abilities range from creating light cirrus clouds to powerful cumulonimbus thunderstorms. The entity's mood directly influences the type of weather phenomena it manifests, which can include rain, snow, hail, and lightning.</p>
