--- a/Aberrations/ABR-001/ABR001.html
+++ b/Aberrations/ABR-001/ABR001.html
@@ -45,11 +45,23 @@
         .header-section div {
             flex: 1;
         }
-        .header-section img {
-            max-width: 200px;
+        .image-container {
+            max-width: 250px;
             margin-left: 20px;
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
+            background-color: #2a2a2a;
+            padding: 10px;
+            text-align: center;
+        }
+        .image-container img {
+            max-width: 100%;
+            border-radius: 8px;
+        }
+        .image-container p {
+            margin: 10px 0 0 0;
+            font-size: 14px;
+            color: #D3D3D3;
         }
         h1 {
             font-size: 22px;
@@ -96,7 +108,10 @@
                 <p><strong>Threat Level:</strong> Class IV: Critical</p>
                 <p><strong>Containment Level:</strong> Delta-2</p>
             </div>
-            <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-001/Image%20of%20ABR001.jpg" alt="Image of ABR-001">
+            <div class="image-container">
+                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-001/Image%20of%20ABR001.jpg" alt="Image of ABR-001">
+                <p>First image of ABR-001</p>
+            </div>
         </div>
 
         <h2>Description</h2>
