--- a/Aberrations/ABR-001/ABR001.html
+++ b/Aberrations/ABR-001/ABR001.html
@@ -50,7 +50,7 @@
             margin-left: 20px;
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
-            background-color: #707070;
+            background-color: #2a2a2a;
             padding: 10px;
             text-align: center;
         }
@@ -92,11 +92,11 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="homepage.html">Home</a>
-        <a href="ABRlist.html">Aberrations Index</a>
-        <a href="about.html">About</a>
-        <a href="research.html">Research</a>
-        <a href="contact.html">Contact</a>
+        <a href="https://hazudo.github.io/ARI/homepage.html">Home</a>
+        <a href="https://hazudo.github.io/ARI/ABRlist.html">Aberrations Index</a>
+        <a href="https://hazudo.github.io/ARI/about.html">About</a>
+        <a href="https://hazudo.github.io/ARI/research.html">Research</a>
+        <a href="https://hazudo.github.io/ARI/contact.html">Contact</a>
     </div>
 
     <div class="container">
