--- a/ABRlist.html
+++ b/ABRlist.html
@@ -23,7 +23,7 @@
             color: #f2f2f2;
             text-align: center;
             padding: 14px 20px;
-            text-decoration: none;
+            text-decoration: none.
         }
         .navbar a:hover {
             background-color: #464646;
@@ -61,13 +61,13 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="homepage.html">Home</a>
-        <a href="ABRlist.html">Aberration Index</a>
-        <a href="clearanceranklist.html">Clearance Rank List</a>
-        <a href="stafftitles.html">Staff Titles</a>
-        <a href="about.html">About</a>
-        <a href="research.html">Research</a>
-        <a href="contact.html">Contact</a>
+        <a href="https://hazudo.github.io/ARI/homepage.html">Home</a>
+        <a href="https://hazudo.github.io/ARI/ABRlist.html">Aberration Index</a>
+        <a href="https://hazudo.github.io/ARI/clearanceranklist.html">Clearance Rank List</a>
+        <a href="https://hazudo.github.io/ARI/stafftitles.html">Staff Titles</a>
+        <a href="https://hazudo.github.io/ARI/about.html">About</a>
+        <a href="https://hazudo.github.io/ARI/research.html">Research</a>
+        <a href="https://hazudo.github.io/ARI/contact.html">Contact</a>
     </div>
 
     <div class="container">
@@ -93,6 +93,36 @@
             <li><a href="Aberrations/ABR018.html">ABR-018 - Reflective Aberration</a></li>
             <li><a href="Aberrations/ABR019.html">ABR-019 - Deathly Snapshot</a></li>
             <li><a href="Aberrations/ABR020.html">ABR-020 - Memory Leech</a></li>
+            <li><a href="Aberrations/ABR021.html">ABR-021 - </a></li>
+            <li><a href="Aberrations/ABR022.html">ABR-022 - </a></li>
+            <li><a href="Aberrations/ABR023.html">ABR-023 - </a></li>
+            <li><a href="Aberrations/ABR024.html">ABR-024 - </a></li>
+            <li><a href="Aberrations/ABR025.html">ABR-025 - </a></li>
+            <li><a href="Aberrations/ABR026.html">ABR-026 - </a></li>
+            <li><a href="Aberrations/ABR027.html">ABR-027 - </a></li>
+            <li><a href="Aberrations/ABR028.html">ABR-028 - </a></li>
+            <li><a href="Aberrations/ABR029.html">ABR-029 - </a></li>
+            <li><a href="Aberrations/ABR030.html">ABR-030 - </a></li>
+            <li><a href="Aberrations/ABR031.html">ABR-031 - </a></li>
+            <li><a href="Aberrations/ABR032.html">ABR-032 - </a></li>
+            <li><a href="Aberrations/ABR033.html">ABR-033 - </a></li>
+            <li><a href="Aberrations/ABR034.html">ABR-034 - </a></li>
+            <li><a href="Aberrations/ABR035.html">ABR-035 - </a></li>
+            <li><a href="Aberrations/ABR036.html">ABR-036 - </a></li>
+            <li><a href="Aberrations/ABR037.html">ABR-037 - </a></li>
+            <li><a href="Aberrations/ABR038.html">ABR-038 - </a></li>
+            <li><a href="Aberrations/ABR039.html">ABR-039 - </a></li>
+            <li><a href="Aberrations/ABR040.html">ABR-040 - </a></li>
+            <li><a href="Aberrations/ABR041.html">ABR-041 - </a></li>
+            <li><a href="Aberrations/ABR042.html">ABR-042 - </a></li>
+            <li><a href="Aberrations/ABR043.html">ABR-043 - </a></li>
+            <li><a href="Aberrations/ABR044.html">ABR-044 - </a></li>
+            <li><a href="Aberrations/ABR045.html">ABR-045 - </a></li>
+            <li><a href="Aberrations/ABR046.html">ABR-046 - </a></li>
+            <li><a href="Aberrations/ABR047.html">ABR-047 - </a></li>
+            <li><a href="Aberrations/ABR048.html">ABR-048 - </a></li>
+            <li><a href="Aberrations/ABR049.html">ABR-049 - </a></li>
+            <li><a href="Aberrations/ABR050.html">ABR-050 - </a></li>
         </ul>
     </div>
 </body>
