--- a/Aberrations/ABR-002/ABR002.html
+++ b/Aberrations/ABR-002/ABR002.html
@@ -50,7 +50,7 @@
             margin-left: 20px;
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
-            background-color: #2a2a2a;
+            background-color: #3D3D3D;
             padding: 10px;
             text-align: center;
         }
