--- a/ABRlist.html
+++ b/ABRlist.html
@@ -74,10 +74,10 @@
         <h1>Aberration Index</h1>
         <ul>
             <li><a href="Aberrations/ABR-001/ABR001.html">ABR-001 - Nephological Entity</a></li>
-            <li><a href="Aberrations/ABR002.html">ABR-002 - Voidshadow</a></li>
-            <li><a href="Aberrations/ABR003.html">ABR-003 - The Unseen Stalker</a></li>
-            <li><a href="Aberrations/ABR004.html">ABR-004 - The Oracle Terminal</a></li>
-            <li><a href="Aberrations/ABR005.html">ABR-005 - The Embrace of Eudaimonia</a></li>
+            <li><a href="Aberrations/ABR-002/ABR002.html">ABR-002 - Voidshadow</a></li>
+            <li><a href="Aberrations/ABR-003/ABR003.html">ABR-003 - The Unseen Stalker</a></li>
+            <li><a href="Aberrations/ABR-004/ABR004.html">ABR-004 - The Oracle Terminal</a></li>
+            <li><a href="Aberrations/ABR-005/ABR005.html">ABR-005 - The Embrace of Eudaimonia</a></li>
             <li><a href="Aberrations/ABR006.html">ABR-006 - The Nexus Construct</a></li>
             <li><a href="Aberrations/ABR007.html">ABR-007 - Luminous Halo</a></li>
             <li><a href="Aberrations/ABR008.html">ABR-008 - Bone Sculptor</a></li>
