--- a/Aberrations/ABR-002/ABR002.html
+++ b/Aberrations/ABR-002/ABR002.html
@@ -110,8 +110,8 @@
                 <p><strong>Containment Level:</strong> Level Delta-2</p>
             </div>
             <div class="image-container">
-                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-001/Image%20of%20ABR001.jpg" alt="Image of ABR-002">
-                <p>First image of ABR-002</p>
+                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-002/Image%20of%20ABR-002.jpg" alt="Image of ABR-002">
+                <p>ABR-002 in containment cell.</p>
             </div>
         </div>
 
