--- a/Aberrations/ABR-001/ABR001.html
+++ b/Aberrations/ABR-001/ABR001.html
@@ -72,9 +72,9 @@
             font-size: 18px;
             color: #D3D3D3;
             margin-top: 40px;
-            margin-bottom: -10px; /* Adjust this value to bring the following text closer */
-            border-bottom: 1px solid #666; /* This creates the line */
-            padding-bottom: 2px; /* Adjust this value to bring the line closer to the text */
+            margin-bottom: -10px;
+            border-bottom: 1px solid #666;
+            padding-bottom: 2px;
         }
         p, ul {
             font-size: 16px;
@@ -87,6 +87,9 @@
         }
         li {
             padding: 5px 0;
+        }
+        .incident-report {
+            margin-bottom: -10px;
         }
     </style>
 </head>
@@ -130,8 +133,9 @@
         <h2>Appendices</h2>
         <p><strong>Background:</strong></p>
         <p>The Nephological Entity was discovered following unusual meteorological events in [REDACTED]. Initial containment involved managing an intense thunderstorm, believed to be a manifestation of the entity's distress. Over time, ARI's containment measures have significantly reduced its distress levels.</p>
-        <p><strong>Incident Report #001:</strong></p>
-        <p>During an initial communication attempt, Doctor ████ and Researcher ████ were injured by an electrical discharge caused by the entity's distress. Both sustained burns and required medical treatment. This incident led to the integration of a Faraday cage within the containment cell and revised communication strategies to prevent future distress.</p>
+        <p class="incident-report"><strong>Incident Report #001:</strong></p>
+        <p class="incident-report">During an initial communication attempt, Doctor ████ and Researcher ████ were injured by an electrical discharge caused by the entity's distress. Both sustained burns and required medical treatment. This incident led to the integration of a Faraday cage within the containment cell and revised communication strategies to prevent future distress.</p>
+        <p><a href="https://hazudo.github.io/ARI/Aberrations/ABR-001/ABR-001_Incident-001.html" style="color: #f2f2f2;">See full report</a></p>
         <p><strong>Containment Protocol Revision:</strong></p>
         <ul>
             <li><strong>Faraday Cage:</strong> Added to prevent electrical discharges.</li>
