--- a/Aberrations/ABR-001/ABR001.html
+++ b/Aberrations/ABR-001/ABR001.html
@@ -135,7 +135,7 @@
         <p>The Nephological Entity was discovered following unusual meteorological events in [REDACTED]. Initial containment involved managing an intense thunderstorm, believed to be a manifestation of the entity's distress. Over time, ARI's containment measures have significantly reduced its distress levels.</p>
         <p class="incident-report"><strong>Incident Report #001:</strong></p>
         <p class="incident-report">During an initial communication attempt, Doctor ████ and Researcher ████ were injured by an electrical discharge caused by the entity's distress. Both sustained burns and required medical treatment. This incident led to the integration of a Faraday cage within the containment cell and revised communication strategies to prevent future distress.</p>
-        <p><a href="https://hazudo.github.io/ARI/Aberrations/ABR-001/ABR-001_Incident-001.html" style="color: #f2f2f2;">See full report</a></p>
+        <p><a href="https://hazudo.github.io/ARI/Aberrations/ABR-001/ABR-001_Incident-001.html" style="color: #32A2EB;">See full report</a></p>
         <p><strong>Containment Protocol Revision:</strong></p>
         <ul>
             <li><strong>Faraday Cage:</strong> Added to prevent electrical discharges.</li>
