--- a/Aberrations/ABR-001/ABR001.html
+++ b/Aberrations/ABR-001/ABR001.html
@@ -88,6 +88,9 @@
         li {
             padding: 5px 0;
         }
+        .closer-text {
+            margin-top: -10px;
+        }
         .incident-report {
             margin-bottom: -10px;
         }
@@ -96,10 +99,13 @@
 <body>
     <div class="navbar">
         <a href="https://hazudo.github.io/ARI/homepage.html">Home</a>
-        <a href="https://hazudo.github.io/ARI/ABRlist.html">Aberrations Index</a>
+        <a href="https://hazudo.github.io/ARI/ABRlist.html">Aberration Index</a>
+        <a href="https://hazudo.github.io/ARI/clearanceranklist.html">Clearance Rank List</a>
+        <a href="https://hazudo.github.io/ARI/stafftitles.html">Staff Titles</a>
         <a href="https://hazudo.github.io/ARI/about.html">About</a>
         <a href="https://hazudo.github.io/ARI/research.html">Research</a>
         <a href="https://hazudo.github.io/ARI/contact.html">Contact</a>
+        <a href="https://hazudo.github.io/ARI/containmentfacilities.html">Containment Facilities</a>
     </div>
 
     <div class="container">
@@ -132,15 +138,15 @@
 
         <h2>Appendices</h2>
         <p><strong>Background:</strong></p>
-        <p>The Nephological Entity was discovered following unusual meteorological events in [REDACTED]. Initial containment involved managing an intense thunderstorm, believed to be a manifestation of the entity's distress. Over time, ARI's containment measures have significantly reduced its distress levels.</p>
+        <p class="closer-text">The Nephological Entity was discovered following unusual meteorological events in [REDACTED]. Initial containment involved managing an intense thunderstorm, believed to be a manifestation of the entity's distress. Over time, ARI's containment measures have significantly reduced its distress levels.</p>
         <p class="incident-report"><strong>Incident Report #001:</strong></p>
-        <p class="incident-report">During an initial communication attempt, Doctor ████ and Researcher ████ were injured by an electrical discharge caused by the entity's distress. Both sustained burns and required medical treatment. This incident led to the integration of a Faraday cage within the containment cell and revised communication strategies to prevent future distress.</p>
+        <p class="closer-text">During an initial communication attempt, Doctor ████ and Researcher ████ were injured by an electrical discharge caused by the entity's distress. Both sustained burns and required medical treatment. This incident led to the integration of a Faraday cage within the containment cell and revised communication strategies to prevent future distress.</p>
         <p><a href="https://hazudo.github.io/ARI/Aberrations/ABR-001/ABR-001_Incident-001.html" style="color: #32A2EB;">See full report</a></p>
         <p><strong>Containment Protocol Revision:</strong></p>
         <ul>
-            <li><strong>Faraday Cage:</strong> Added to prevent electrical discharges.</li>
-            <li><strong>Emotional Intelligence Training:</strong> Required for all personnel interacting with the entity to reduce potential distress triggers.</li>
-            <li><strong>Emergency Evacuation Directive:</strong> Established for swift evacuation in case of increased distress signals.</li>
+            <li class="closer-text"><strong>Faraday Cage:</strong> Added to prevent electrical discharges.</li>
+            <li class="closer-text"><strong>Emotional Intelligence Training:</strong> Required for all personnel interacting with the entity to reduce potential distress triggers.</li>
+            <li class="closer-text"><strong>Emergency Evacuation Directive:</strong> Established for swift evacuation in case of increased distress signals.</li>
         </ul>
 
         <h1>END OF DOCUMENT</h1>
