--- a/Aberrations/ABR-001/ABR001.html
+++ b/Aberrations/ABR-001/ABR001.html
@@ -92,7 +92,7 @@
             margin-top: -8px;
         }
         .incident-report {
-            margin-bottom: -8px;
+            margin-bottom: -1px;
         }
     </style>
 </head>
@@ -138,7 +138,7 @@
         <p>The entity exhibits a range of behaviors linked to its emotional state, with calm periods marked by benign weather patterns and distress leading to severe weather events. Initial interactions have demonstrated the entity's ability to understand and respond to visual cues, although sudden changes in mood can result in hazardous conditions.</p>
 
         <h2>Appendices</h2>
-        <p class="incident-report">><strong>Background:</strong></p>
+        <p class="incident-report"><strong>Background:</strong></p>
         <p class="closer-text">The Nephological Entity was discovered following unusual meteorological events in [REDACTED]. Initial containment involved managing an intense thunderstorm, believed to be a manifestation of the entity's distress. Over time, ARI's containment measures have significantly reduced its distress levels.</p>
         <p class="incident-report"><strong>Incident Report #001:</strong></p>
         <p class="closer-text">During an initial communication attempt, Doctor ████ and Researcher ████ were injured by an electrical discharge caused by the entity's distress. Both sustained burns and required medical treatment. This incident led to the integration of a Faraday cage within the containment cell and revised communication strategies to prevent future distress.</p>
