--- a/clearanceranklist.html
+++ b/clearanceranklist.html
@@ -59,12 +59,15 @@
 </head>
 <body>
      <div class="navbar">
-        <a href="homepage.html">Home</a>
-        <a href="ABRlist.html">Aberration Index</a>
-        <a href="clearanceranklist.html">Clearance Rank List</a>
-        <a href="about.html">About</a>
-        <a href="research.html">Research</a>
-        <a href="contact.html">Contact</a>
+        <a href="https://hazudo.github.io/ARI/homepage.html">Home</a>
+        <a href="https://hazudo.github.io/ARI/ABRlist.html">Aberration Index</a>
+        <a href="https://hazudo.github.io/ARI/clearanceranklist.html">Clearance Rank List</a>
+        <a href="https://hazudo.github.io/ARI/containmentfacilities.html">Containment Facilities</a>
+        <a href="https://hazudo.github.io/ARI/stafftitles.html">Staff Titles</a>
+        <a href="https://hazudo.github.io/ARI/about.html">About</a>
+        <a href="https://hazudo.github.io/ARI/research.html">Research</a>
+        <a href="https://hazudo.github.io/ARI/contact.html">Contact</a>
+
     </div>
 
     <div class="container">
